@@ -97,6 +97,7 @@
              new_state="private" trigger="USER"
              before_script="" after_script="">
   <action url="%(content_url)s/content_hide_form"
+          icon="%(portal_url)s/retract_icon.png"
           category="workflow">Make private</action>
   <guard>
    <guard-role>Owner</guard-role>
@@ -108,6 +109,7 @@
              new_state="published" trigger="USER"
              before_script="" after_script="">
   <action url="%(object_url)s/content_publish_form"
+          icon="%(portal_url)s/approve_icon.png"
           category="workflow">Publish</action>
   <guard>
    <guard-permission>Review portal content</guard-permission>
@@ -119,6 +121,7 @@
              new_state="visible" trigger="USER"
              before_script="" after_script="">
   <action url="%(object_url)s/content_reject_form"
+          icon="%(portal_url)s/reject_icon.png"
           category="workflow">Reject</action>
   <guard>
    <guard-permission>Review portal content</guard-permission>
@@ -130,6 +133,7 @@
              new_state="visible" trigger="USER"
              before_script="" after_script="">
   <action url="%(object_url)s/content_retract_form"
+          icon="%(portal_url)s/retract_icon.png"
           category="workflow">Retract</action>
   <guard>
    <guard-permission>Request review</guard-permission>
@@ -141,6 +145,7 @@
              new_state="visible" trigger="USER"
              before_script="" after_script="">
   <action url="%(content_url)s/content_show_form"
+          icon="%(portal_url)s/approve_icon.png"
           category="workflow">Make visible</action>
   <guard>
    <guard-role>Owner</guard-role>
@@ -152,6 +157,7 @@
              new_state="pending" trigger="USER"
              before_script="" after_script="">
   <action url="%(object_url)s/content_submit_form"
+          icon="%(portal_url)s/submit_icon.png"
           category="workflow">Submit</action>
   <guard>
    <guard-permission>Request review</guard-permission>
@@ -161,6 +167,7 @@
  <worklist worklist_id="reviewer_queue" title="">
   <description>Reviewer tasks</description>
   <action url="%(portal_url)s/search?review_state=pending"
+          icon="%(portal_url)s/worklist_icon.png"
           category="global">Pending (%(count)d)</action>
   <guard>
    <guard-permission>Review portal content</guard-permission>
